[add] structure header

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
 <body>
 
+  <header>
+    <div class="container align-center">
+      <div class="wd-20 border-b pd-0-10">link link link</div>
+      <div class="wd-60 border-b pd-0-10">logo</div>
+      <div class="wd-20 border-b pd-0-10">icons</div>
+    </div>
+  </header>
+
 </body>
 
 </html>
