[add] structure main

--- a/index.html
+++ b/index.html
@@ -15,11 +15,38 @@
 
   <header>
     <div class="container align-center">
-      <div class="wd-20 border-b pd-0-10">link link link</div>
-      <div class="wd-60 border-b pd-0-10">logo</div>
-      <div class="wd-20 border-b pd-0-10">icons</div>
+      <div class="wd-20 bg-violet border-b pd-0-10">link link link</div>
+      <div class="wd-60 bg-violet border-b pd-0-10">logo</div>
+      <div class="wd-20 bg-violet border-b pd-0-10">icons</div>
     </div>
   </header>
+
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="card wd-33 h-500 bg-violet border-b">
+
+        </div>
+        <div class="card wd-33 h-500 bg-violet border-b">
+
+        </div>
+        <div class="card wd-33 h-500 bg-violet border-b">
+
+        </div>
+        <div class="card wd-33 h-500 bg-violet border-b">
+
+        </div>
+        <div class="card wd-33 h-500 bg-violet border-b">
+
+        </div>
+        <div class="card wd-33 h-500 bg-violet border-b">
+
+        </div>
+      </div>
+    </div>
+
+
+  </main>
 
 </body>
 
