[add] structure footer

--- a/index.html
+++ b/index.html
@@ -45,8 +45,16 @@
       </div>
     </div>
 
-
   </main>
+
+  <footer>
+
+    <div class="container bg-violet align-center justify-between">
+      <div class="pd-0-10">info</div>
+      <div class="pd-0-10">icons</div>
+    </div>
+
+  </footer>
 
 </body>
 
