[add] links header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>Document</title>
+  <title>Boolando</title>
 </head>
 
 <body>
 
   <header>
     <div class="container align-center">
-      <div class="wd-20 bg-violet border-b pd-0-10">link link link</div>
-      <div class="wd-60 bg-violet border-b pd-0-10">logo</div>
+      <div class="wd-20 bg-violet border-b pd-0-10">
+        <a href="#">Donna</a>
+        <a href="#">Uomo</a>
+        <a href="#">Bambini</a>
+      </div>
+      <div class="wd-60 bg-violet border-b pd-0-10">
+      </div>
       <div class="wd-20 bg-violet border-b pd-0-10">icons</div>
     </div>
   </header>
