[add] logo header

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 <body>
 
   <header>
-    <div class="container align-center">
+    <div class="container align-center size-20">
       <div class="wd-20 bg-violet border-b pd-0-10">
         <a href="#">Donna</a>
         <a href="#">Uomo</a>
         <a href="#">Bambini</a>
       </div>
-      <div class="wd-60 bg-violet border-b pd-0-10">
+      <div class="wd-60 bg-violet border-b pd-0-10 text-center">
+        <img src="./assets/img/boolean-logo.png" alt="Logo">
       </div>
       <div class="wd-20 bg-violet border-b pd-0-10">icons</div>
     </div>
