[add] icons header

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
   <header>
     <div class="container align-center size-20">
-      <div class="wd-20 bg-violet border-b pd-0-10">
+      <div class="wd-20">
         <a href="#">Donna</a>
         <a href="#">Uomo</a>
         <a href="#">Bambini</a>
       </div>
-      <div class="wd-60 bg-violet border-b pd-0-10 text-center">
+      <div class="wd-60 text-center">
         <img src="./assets/img/boolean-logo.png" alt="Logo">
       </div>
-      <div class="wd-20 bg-violet border-b pd-0-10">icons</div>
+      <div class="wd-20 text-right"><i class="fa-regular fa-user"></i><i class="fa-regular fa-heart"></i><i
+          class="fa-solid fa-bag-shopping"></i></div>
     </div>
   </header>
 
