--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
     <div class="container">
       <div class="row">
         <div class="card wd-33 h-500 bg-violet border-b">
-
+          <img src="./assets/img/1.webp" alt="Levi's">
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
-
+          <img src="./assets/img/2.webp" alt="">
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
-
+          <img src="./assets/img/3.webp" alt="">
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
-
+          <img src="./assets/img/4.webp" alt="">
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
-
+          <img src="./assets/img/5.webp" alt="">
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
-
+          <img src="./assets/img/6.webp" alt="">
         </div>
       </div>
     </div>
