--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
       <div class="row">
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/1.webp" alt="Levi's">
+          <span class="discount size-20">-50%</span>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/2.webp" alt="">
+          <span class="discount size-20">-30%</span>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/3.webp" alt="">
+          <span class="discount size-20">-30%</span>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/4.webp" alt="">
+          <span class="discount size-20">-50%</span>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/5.webp" alt="">
