--- a/index.html
+++ b/index.html
@@ -35,26 +35,57 @@
           <img src="./assets/img/1.webp" alt="Levi's">
           <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
+          <ul>
+            <li class="brand size-20">Levi's</li>
+            <li class="name">RELAXED FIT TEE UNISEX</li>
+            <li><span class="discounted size-20">14,99 &euro; </span><span class="full-price size-20">29,99
+                &euro;</span></li>
+          </ul>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/2.webp" alt="">
           <span class="discount left-0 size-20">-30%</span>
+          <ul>
+            <li class="marca"></li>
+            <li class="nome"></li>
+            <li class="prezzo"></li>
+          </ul>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/3.webp" alt="">
           <span class="discount left-0 size-20">-30%</span>
+          <ul>
+            <li class="marca"></li>
+            <li class="nome"></li>
+            <li class="prezzo"></li>
+          </ul>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/4.webp" alt="">
           <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
+          <ul>
+            <li class="marca"></li>
+            <li class="nome"></li>
+            <li class="prezzo"></li>
+          </ul>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/5.webp" alt="">
+          <ul>
+            <li class="marca"></li>
+            <li class="nome"></li>
+            <li class="prezzo"></li>
+          </ul>
         </div>
         <div class="card wd-33 h-500 bg-violet border-b">
           <img src="./assets/img/6.webp" alt="">
           <span class="eco left-0 size-20">Sostenibilit&agrave;</span>
+          <ul>
+            <li class="marca"></li>
+            <li class="nome"></li>
+            <li class="prezzo"></li>
+          </ul>
         </div>
       </div>
     </div>
