--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="card wd-33 h-500 bg-violet border-b">
+        <div class="card wd-33">
           <img src="./assets/img/1.webp" alt="Levi's">
           <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
@@ -42,49 +42,52 @@
                 &euro;</span></li>
           </ul>
         </div>
-        <div class="card wd-33 h-500 bg-violet border-b">
+        <div class="card wd-33">
           <img src="./assets/img/2.webp" alt="">
           <span class="discount left-0 size-20">-30%</span>
           <ul>
-            <li class="marca"></li>
-            <li class="nome"></li>
-            <li class="prezzo"></li>
+            <li class="brand size-20">Guess</li>
+            <li class="name">ROSES TEE</li>
+            <li><span class="discounted size-20">20,99 &euro; </span><span class="full-price size-20">29,99
+                &euro;</span></li>
           </ul>
         </div>
-        <div class="card wd-33 h-500 bg-violet border-b">
+        <div class="card wd-33">
           <img src="./assets/img/3.webp" alt="">
           <span class="discount left-0 size-20">-30%</span>
           <ul>
-            <li class="marca"></li>
-            <li class="nome"></li>
-            <li class="prezzo"></li>
+            <li class="brand size-20">Come zucchero filato</li>
+            <li class="name">VOGLIA DI COLORI PASTELLO</li>
+            <li><span class="discounted size-20">129,99 &euro; </span><span class="full-price size-20">184,99
+                &euro;</span></li>
           </ul>
         </div>
-        <div class="card wd-33 h-500 bg-violet border-b">
+        <div class="card wd-33">
           <img src="./assets/img/4.webp" alt="">
           <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
           <ul>
-            <li class="marca"></li>
-            <li class="nome"></li>
-            <li class="prezzo"></li>
+            <li class="brand size-20">Levi's</li>
+            <li class="name">TEE UNISEX</li>
+            <li><span class="discounted size-20">14,99 &euro; </span><span class="full-price size-20">29,99
+                &euro;</span></li>
           </ul>
         </div>
-        <div class="card wd-33 h-500 bg-violet border-b">
+        <div class="card wd-33">
           <img src="./assets/img/5.webp" alt="">
           <ul>
-            <li class="marca"></li>
-            <li class="nome"></li>
-            <li class="prezzo"></li>
+            <li class="brand size-20">Maya Deluxe</li>
+            <li class="name">S TRIP BODICE</li>
+            <li><span class="discounted size-20">99,99 &euro; </span></li>
           </ul>
         </div>
-        <div class="card wd-33 h-500 bg-violet border-b">
+        <div class="card wd-33">
           <img src="./assets/img/6.webp" alt="">
           <span class="eco left-0 size-20">Sostenibilit&agrave;</span>
           <ul>
-            <li class="marca"></li>
-            <li class="nome"></li>
-            <li class="prezzo"></li>
+            <li class="brand size-20">Esprit</li>
+            <li class="name">MAGLIONE - BLACK</li>
+            <li><span class="discounted size-20">29,99 &euro; </span></li>
           </ul>
         </div>
       </div>
