--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <img src="./assets/img/1.webp" alt="Levi's">
           <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
+          <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Levi's</li>
             <li class="name">RELAXED FIT TEE UNISEX</li>
@@ -45,6 +46,7 @@
         <div class="card wd-33">
           <img src="./assets/img/2.webp" alt="">
           <span class="discount left-0 size-20">-30%</span>
+          <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Guess</li>
             <li class="name">ROSES TEE</li>
@@ -55,6 +57,7 @@
         <div class="card wd-33">
           <img src="./assets/img/3.webp" alt="">
           <span class="discount left-0 size-20">-30%</span>
+          <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Come zucchero filato</li>
             <li class="name">VOGLIA DI COLORI PASTELLO</li>
@@ -66,6 +69,7 @@
           <img src="./assets/img/4.webp" alt="">
           <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
+          <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Levi's</li>
             <li class="name">TEE UNISEX</li>
@@ -75,6 +79,7 @@
         </div>
         <div class="card wd-33">
           <img src="./assets/img/5.webp" alt="">
+          <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Maya Deluxe</li>
             <li class="name">S TRIP BODICE</li>
@@ -84,6 +89,7 @@
         <div class="card wd-33">
           <img src="./assets/img/6.webp" alt="">
           <span class="eco left-0 size-20">Sostenibilit&agrave;</span>
+          <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Esprit</li>
             <li class="name">MAGLIONE - BLACK</li>
@@ -97,9 +103,19 @@
 
   <footer>
 
-    <div class="container bg-violet align-center justify-between">
-      <div class="pd-0-10">info</div>
-      <div class="pd-0-10">icons</div>
+    <div class="container align-center justify-between">
+      <div class="pd-0-10">
+        <h3 class="mg-bottom-10">Boolando s.r.l</h3>
+        <span class="mg-right-10 size-20">Informazioni legali</span>
+        <span class="mg-right-10 size-20">Informativa sulla privacy</span>
+        <span class="size-20">Diritto di accesso</span>
+      </div>
+      <div class="pd-0-10">
+        <span class="size-20 block">Trovaci anche su</span>
+        <span class="size-20"><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-facebook-f"></i><i
+            class="fa-brands fa-instagram"></i><i class="fa-brands fa-pinterest"></i><i
+            class="fa-brands fa-youtube"></i></span>
+      </div>
     </div>
 
   </footer>
