[add] hover img and hearts

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div class="container">
       <div class="row">
         <div class="card wd-33">
-          <img src="./assets/img/1.webp" alt="Levi's">
-          <span class="discount left-0 size-20">-50%</span>
+          <img class="front-image" src="./assets/img/1.webp" alt="">
+          <img class="back-image" src="./assets/img/1b.webp" alt="">
+
+          <span class=" discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
           <span class="heart">&hearts;</span>
           <ul>
@@ -44,9 +46,10 @@
           </ul>
         </div>
         <div class="card wd-33">
-          <img src="./assets/img/2.webp" alt="">
-          <span class="discount left-0 size-20">-30%</span>
-          <span class="heart">&hearts;</span>
+          <img class="front-image" src="./assets/img/2.webp" alt="">
+          <img class="back-image" src="./assets/img/2b.webp" alt="">
+
+          <div class="discount left-0 size-20">-30%</div> <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Guess</li>
             <li class="name">ROSES TEE</li>
@@ -55,9 +58,10 @@
           </ul>
         </div>
         <div class="card wd-33">
-          <img src="./assets/img/3.webp" alt="">
-          <span class="discount left-0 size-20">-30%</span>
-          <span class="heart">&hearts;</span>
+          <img class="front-image" src="./assets/img/3.webp" alt="">
+          <img class="back-image" src="./assets/img/3b.webp" alt="">
+
+          <span class="discount left-0 size-20">-30%</span> <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Come zucchero filato</li>
             <li class="name">VOGLIA DI COLORI PASTELLO</li>
@@ -66,9 +70,11 @@
           </ul>
         </div>
         <div class="card wd-33">
-          <img src="./assets/img/4.webp" alt="">
-          <span class="discount left-0 size-20">-50%</span>
-          <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
+          <img class="front-image" src="./assets/img/4.webp" alt="">
+          <img class="back-image" src="./assets/img/4b.webp" alt="">
+
+          <span class="discount left-0 size-20">-50%</span> <span
+            class="eco left-65 size-20">Sostenibilit&agrave;</span>
           <span class="heart">&hearts;</span>
           <ul>
             <li class="brand size-20">Levi's</li>
@@ -78,8 +84,10 @@
           </ul>
         </div>
         <div class="card wd-33">
-          <img src="./assets/img/5.webp" alt="">
-          <span class="heart">&hearts;</span>
+          <img class="front-image" src="./assets/img/5.webp" alt="">
+          <img class="back-image" src="./assets/img/5b.webp" alt="">
+
+          <div class="heart">&hearts;</div>
           <ul>
             <li class="brand size-20">Maya Deluxe</li>
             <li class="name">S TRIP BODICE</li>
@@ -87,7 +95,9 @@
           </ul>
         </div>
         <div class="card wd-33">
-          <img src="./assets/img/6.webp" alt="">
+          <img class="front-image" src="./assets/img/6.webp" alt="">
+          <img class="back-image" src="./assets/img/6b.webp" alt="">
+
           <span class="eco left-0 size-20">Sostenibilit&agrave;</span>
           <span class="heart">&hearts;</span>
           <ul>
