--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
 
+  <!-- Intestazione -->
   <header>
     <div class="container align-center size-20">
       <div class="wd-20">
@@ -28,14 +29,15 @@
     </div>
   </header>
 
+  <!-- Contenuto -->
   <main>
+    <!-- Class container per prodotti -->
     <div class="container">
       <div class="row">
         <div class="card wd-33">
           <img class="front-image" src="./assets/img/1.webp" alt="">
           <img class="back-image" src="./assets/img/1b.webp" alt="">
-
-          <span class=" discount left-0 size-20">-50%</span>
+          <span class="discount left-0 size-20">-50%</span>
           <span class="eco left-65 size-20">Sostenibilit&agrave;</span>
           <span class="heart">&hearts;</span>
           <ul>
@@ -111,8 +113,8 @@
 
   </main>
 
+  <!-- Piè di pagina -->
   <footer>
-
     <div class="container align-center justify-between">
       <div class="pd-0-10">
         <h3 class="mg-bottom-10">Boolando s.r.l</h3>
